# CP-ripgrep

./: Cargo.toml  README.md  plan.md
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
